--- a/a/ds.html
+++ b/a/ds.html
@@ -1,1 +1,1 @@
-<a href="https://www.linkedin.com/in/sukruth/"><img src="assets/images/datascience.png" /></a>
+<a href="https://www.linkedin.com/in/sukruth/"><img src="assets/images/datascience.png" style="width: auto;"/></a>
